gao cheng zhe yi ti an jiang sun hai chuang xin bing zao cheng dian zi la ji dui ji ru shan chang qi yi

--- a/date/2025-08/page-12.htm
+++ b/date/2025-08/page-12.htm
@@ -201,16 +201,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/blog/26-reasons-why-insurance-26-is-worth-the-investment.htm" title="26 Reasons Why Insurance 26 is Worth the Investment">26 Reasons Why Insurance 26 is Worth the Investment</a></li>
+                        <li class="py-2"><a href="/blog/geico-insurance-claims-phone-number-amp-best-practices.htm" title="GEICO Insurance Claims Phone Number &amp; Best Practices">GEICO Insurance Claims Phone Number &amp; Best Practices</a></li>
+                        <li class="py-2"><a href="/blog/star-health-insurance-emergency-number-for-covid19-coverage.htm" title="Star Health Insurance Emergency Number for COVID-19 Coverage">Star Health Insurance Emergency Number for COVID-19 Coverage</a></li>
+                        <li class="py-2"><a href="/blog/does-pet-insurance-cover-cremation-for-purebred-pets.htm" title="Does Pet Insurance Cover Cremation for Purebred Pets?">Does Pet Insurance Cover Cremation for Purebred Pets?</a></li>
+                        <li class="py-2"><a href="/blog/insurance-80-rule-how-to-handle-renovations-and-updates.htm" title="Insurance 80 Rule: How to Handle Renovations and Updates">Insurance 80 Rule: How to Handle Renovations and Updates</a></li>
+                        <li class="py-2"><a href="/blog/the-best-car-insurance-for-hybrid-and-electric-vehicles.htm" title="The Best Car Insurance for Hybrid and Electric Vehicles">The Best Car Insurance for Hybrid and Electric Vehicles</a></li>
                         <li class="py-2"><a href="/blog/insurance-08p-and-digital-transformation.htm" title="Insurance 08p and Digital Transformation">Insurance 08p and Digital Transformation</a></li>
                         <li class="py-2"><a href="/blog/star-health-insurance-coverage-for-fractures-amp-injuries.htm" title="Star Health Insurance Coverage for Fractures &amp; Injuries">Star Health Insurance Coverage for Fractures &amp; Injuries</a></li>
                         <li class="py-2"><a href="/blog/lowcost-commercial-vehicle-insurance-for-startups.htm" title="Low-Cost Commercial Vehicle Insurance for Startups">Low-Cost Commercial Vehicle Insurance for Startups</a></li>
                         <li class="py-2"><a href="/blog/john-lewis-home-insurance-how-to-cover-highrisk-items.htm" title="John Lewis Home Insurance: How to Cover High-Risk Items">John Lewis Home Insurance: How to Cover High-Risk Items</a></li>
-                        <li class="py-2"><a href="/blog/jerry-insurance-vs-allstate-a-sidebyside-look.htm" title="Jerry Insurance vs. Allstate: A Side-by-Side Look">Jerry Insurance vs. Allstate: A Side-by-Side Look</a></li>
-                        <li class="py-2"><a href="/blog/how-to-ensure-hipaa-compliance-in-your-insurance-portal.htm" title="How to Ensure HIPAA Compliance in Your Insurance Portal">How to Ensure HIPAA Compliance in Your Insurance Portal</a></li>
-                        <li class="py-2"><a href="/blog/progressive-insurance-claims-phone-number-247-support.htm" title="Progressive Insurance Claims Phone Number (24/7 Support)">Progressive Insurance Claims Phone Number (24/7 Support)</a></li>
-                        <li class="py-2"><a href="/blog/farmers-insurance-open-enrollment-best-plans-for-remote-workers.htm" title="Farmers Insurance Open Enrollment: Best Plans for Remote Workers">Farmers Insurance Open Enrollment: Best Plans for Remote Workers</a></li>
-                        <li class="py-2"><a href="/blog/does-24petwatch-cover-xrays-and-blood-tests.htm" title="Does 24PetWatch Cover X-Rays and Blood Tests?">Does 24PetWatch Cover X-Rays and Blood Tests?</a></li>
-                        <li class="py-2"><a href="/blog/how-to-cancel-geico-insurance-if-youre-downsizing-vehicles.htm" title="How to Cancel GEICO Insurance If You’re Downsizing Vehicles">How to Cancel GEICO Insurance If You’re Downsizing Vehicles</a></li>
                     </ul>
     </div>
 </div>
@@ -222,7 +222,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-09/" title="2025-09  Blog Archive">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">38</span> <a href="/date/2025-09/" title="2025-09  Blog Archive">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">116</span> <a href="/date/2025-08/" title="2025-08  Blog Archive">2025-08</a></h4>
