gao yao qiu mian xiang wei lai 5G yao qu de geng da de cheng gong xu yao quan hang ye li zu 5G shang

--- a/date/2025-07/page-7.htm
+++ b/date/2025-07/page-7.htm
@@ -169,16 +169,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/blog/local-listings-spanishspeaking-insurance-agents-in-your-region.htm" title="Local Listings: Spanish-Speaking Insurance Agents in Your Region">Local Listings: Spanish-Speaking Insurance Agents in Your Region</a></li>
-                        <li class="py-2"><a href="/blog/subrogation-in-health-insurance-what-you-need-to-know.htm" title="Subrogation in Health Insurance: What You Need to Know">Subrogation in Health Insurance: What You Need to Know</a></li>
-                        <li class="py-2"><a href="/blog/life-insurance-agents-near-me-should-i-choose-big-firms-or-local-brokers.htm" title="Life Insurance Agents Near Me: Should I Choose Big Firms or Local Brokers?">Life Insurance Agents Near Me: Should I Choose Big Firms or Local Brokers?</a></li>
-                        <li class="py-2"><a href="/blog/united-india-insurances-fire-insurance-whats-covered.htm" title="United India Insurance’s Fire Insurance: What’s Covered?">United India Insurance’s Fire Insurance: What’s Covered?</a></li>
-                        <li class="py-2"><a href="/blog/how-to-customize-your-kurnia-insurance-policy.htm" title="How to Customize Your Kurnia Insurance Policy">How to Customize Your Kurnia Insurance Policy</a></li>
-                        <li class="py-2"><a href="/blog/no-deposit-car-insurance-hidden-fees-to-watch-for.htm" title="No Deposit Car Insurance: Hidden Fees to Watch For">No Deposit Car Insurance: Hidden Fees to Watch For</a></li>
-                        <li class="py-2"><a href="/blog/can-you-get-a-refund-if-your-flight-is-delayed.htm" title="Can You Get a Refund If Your Flight Is Delayed?">Can You Get a Refund If Your Flight Is Delayed?</a></li>
-                        <li class="py-2"><a href="/blog/the-role-of-an-insurance-verification-specialist-in-healthcare.htm" title="The Role of an Insurance Verification Specialist in Healthcare">The Role of an Insurance Verification Specialist in Healthcare</a></li>
-                        <li class="py-2"><a href="/blog/online-life-insurance-quote-calculator-how-to-plan-for-longterm-care.htm" title="Online Life Insurance Quote Calculator: How to Plan for Long-Term Care">Online Life Insurance Quote Calculator: How to Plan for Long-Term Care</a></li>
-                        <li class="py-2"><a href="/blog/the-role-of-insurance-health-companies-in-digital-health-innovation.htm" title="The Role of Insurance Health Companies in Digital Health Innovation">The Role of Insurance Health Companies in Digital Health Innovation</a></li>
+                        <li class="py-2"><a href="/blog/geico-roadside-assistance-for-teen-drivers.htm" title="GEICO Roadside Assistance for Teen Drivers">GEICO Roadside Assistance for Teen Drivers</a></li>
+                        <li class="py-2"><a href="/blog/insurance-220-license-is-it-worth-getting.htm" title="Insurance 220 License: Is It Worth Getting?">Insurance 220 License: Is It Worth Getting?</a></li>
+                        <li class="py-2"><a href="/blog/how-to-find-student-insurance-plans-online.htm" title="How to Find Student Insurance Plans Online">How to Find Student Insurance Plans Online</a></li>
+                        <li class="py-2"><a href="/blog/what-to-expect-during-your-first-meeting-with-a-family-insurance-agent.htm" title="What to Expect During Your First Meeting with a Family Insurance Agent">What to Expect During Your First Meeting with a Family Insurance Agent</a></li>
+                        <li class="py-2"><a href="/blog/farmers-insurance-towing-coverage-for-fleet-vehicles.htm" title="Farmers Insurance Towing: Coverage for Fleet Vehicles">Farmers Insurance Towing: Coverage for Fleet Vehicles</a></li>
+                        <li class="py-2"><a href="/blog/rv-insurance-options-for-fulltime-travelers.htm" title="RV Insurance Options for Full-Time Travelers">RV Insurance Options for Full-Time Travelers</a></li>
+                        <li class="py-2"><a href="/blog/how-next-insurance-compares-to-progressive-commercial.htm" title="How Next Insurance Compares to Progressive Commercial">How Next Insurance Compares to Progressive Commercial</a></li>
+                        <li class="py-2"><a href="/blog/protecting-your-family-life-insurance-for-nonworking-parents.htm" title="Protecting Your Family: Life Insurance for Non-Working Parents">Protecting Your Family: Life Insurance for Non-Working Parents</a></li>
+                        <li class="py-2"><a href="/blog/the-best-insurance-agent-blogs-to-follow.htm" title="The Best Insurance Agent Blogs to Follow">The Best Insurance Agent Blogs to Follow</a></li>
+                        <li class="py-2"><a href="/blog/how-owners-auto-insurance-protects-against-theft.htm" title="How Owner’s Auto Insurance Protects Against Theft">How Owner’s Auto Insurance Protects Against Theft</a></li>
                     </ul>
     </div>
 </div>
@@ -190,7 +190,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-10/" title="2025-10  Blog Archive">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-10/" title="2025-10  Blog Archive">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">60</span> <a href="/date/2025-09/" title="2025-09  Blog Archive">2025-09</a></h4>
